[gd_scene load_steps=24 format=2]

[ext_resource path="res://Assets/UI/shop stuff/Shop Panel.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/shop stuff/Upgrade Panel.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/shop stuff/Quest (Pressed).png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/shop stuff/Sell (Pressed).png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/shop stuff/Market UI.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/shop stuff/Sell (Unpressed).png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/shop stuff/Quest (Unpressed).png" type="Texture" id=7]
[ext_resource path="res://Afterlife Crisis Ver2.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://src/Upgrade Panel.gd" type="Script" id=9]
[ext_resource path="res://Assets/UI/shop stuff/Coffin (unpressed).png" type="Texture" id=10]
[ext_resource path="res://Assets/UI/shop stuff/Homing Souls (pressed).png" type="Texture" id=11]
[ext_resource path="res://Assets/UI/shop stuff/Void (unpressed).png" type="Texture" id=12]
[ext_resource path="res://Assets/UI/shop stuff/Void (pressed).png" type="Texture" id=13]
[ext_resource path="res://Assets/UI/shop stuff/Grave (unpressed).png" type="Texture" id=14]
[ext_resource path="res://Assets/UI/shop stuff/Coin.png" type="Texture" id=15]
[ext_resource path="res://Assets/UI/shop stuff/Grave (pressed).png" type="Texture" id=16]
[ext_resource path="res://Assets/UI/shop stuff/Coffin (pressed).png" type="Texture" id=17]
[ext_resource path="res://Assets/UI/shop stuff/Homing Souls (unpressed).png" type="Texture" id=18]
[ext_resource path="res://Assets/UI/shop stuff/Attack Up (pressed).png" type="Texture" id=19]
[ext_resource path="res://Assets/UI/shop stuff/Attack Up (unpressed).png" type="Texture" id=20]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=2]
resource_name = "move_offscreen"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 236.922, 137.733 ), Vector2( 236.922, 141.733 ), Vector2( 236.922, -50 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 8 )

[node name="Upgrade Panel" type="Node2D"]
position = Vector2( 236.922, 137.733 )
script = ExtResource( 9 )

[node name="Shop Panel" type="Sprite" parent="."]
position = Vector2( 0.71272, 0.35636 )
texture = ExtResource( 1 )

[node name="MarketUI" type="Sprite" parent="."]
position = Vector2( -148.958, 21.0252 )
texture = ExtResource( 5 )

[node name="MoneyText" type="Label" parent="MarketUI"]
margin_left = 11.0582
margin_top = -52.5499
margin_right = 42.0582
margin_bottom = -44.5499
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "text"

[node name="SlimeSoulText" type="Label" parent="MarketUI"]
margin_left = 10.7933
margin_top = -33.7444
margin_right = 41.7933
margin_bottom = -25.7444
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "text"

[node name="GhostSoulText" type="Label" parent="MarketUI"]
margin_left = 10.5284
margin_top = -13.6765
margin_right = 41.5284
margin_bottom = -5.67653
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZombieSoulText" type="Label" parent="MarketUI"]
margin_left = 10.9744
margin_top = 6.09403
margin_right = 41.9744
margin_bottom = 14.094
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VampireSoulText" type="Label" parent="MarketUI"]
margin_left = 10.8257
margin_top = 27.6484
margin_right = 41.8257
margin_bottom = 35.6484
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReaperSoulText" type="Label" parent="MarketUI"]
margin_left = 10.6771
margin_top = 47.7163
margin_right = 41.6771
margin_bottom = 55.7163
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quest Button" type="TextureButton" parent="."]
margin_left = -60.5795
margin_top = -38.784
margin_right = 10.4205
margin_bottom = -19.784
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sell Button" type="TextureButton" parent="."]
margin_left = 72.2102
margin_top = -38.784
margin_right = 143.21
margin_bottom = -19.784
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upgrade Panel" type="Sprite" parent="."]
position = Vector2( 40.5492, 35.4311 )
texture = ExtResource( 2 )

[node name="Homing Souls" type="TextureButton" parent="Upgrade Panel"]
margin_left = -94.0
margin_top = -25.0
margin_right = -58.0
margin_bottom = 11.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 11 )

[node name="Grave Button" type="TextureButton" parent="Upgrade Panel"]
margin_left = -54.4712
margin_top = -25.1641
margin_right = -9.21603
margin_bottom = 10.8359
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 16 )

[node name="DmgButton" type="TextureButton" parent="Upgrade Panel"]
margin_left = -14.4712
margin_top = -25.1641
margin_right = 30.784
margin_bottom = 10.8359
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 20 )
texture_pressed = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coffin Button" type="TextureButton" parent="Upgrade Panel"]
margin_left = 25.5288
margin_top = -25.1641
margin_right = 61.5288
margin_bottom = 10.8359
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 17 )

[node name="Void Button" type="TextureButton" parent="Upgrade Panel"]
margin_left = 65.5288
margin_top = -25.1641
margin_right = 101.529
margin_bottom = 10.8359
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/move_offscreen = SubResource( 2 )

[node name="UpgradeCosts" type="Node2D" parent="."]

[node name="Coin" type="Sprite" parent="UpgradeCosts"]
position = Vector2( -48.3378, 51.8052 )
texture = ExtResource( 15 )

[node name="Label" type="Label" parent="UpgradeCosts/Coin"]
margin_left = 6.4615
margin_top = -2.4976
margin_right = 22.4615
margin_bottom = 11.5024
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "50"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin2" type="Sprite" parent="UpgradeCosts"]
position = Vector2( -11.0583, 51.4418 )
texture = ExtResource( 15 )

[node name="Label2" type="Label" parent="UpgradeCosts/Coin2"]
margin_left = 5.3378
margin_top = -2.123
margin_right = 29.3378
margin_bottom = 11.877
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "250"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin3" type="Sprite" parent="UpgradeCosts"]
position = Vector2( 29.4739, 51.4307 )
texture = ExtResource( 15 )

[node name="Label3" type="Label" parent="UpgradeCosts/Coin3"]
margin_left = 4.58868
margin_top = -2.87219
margin_right = 28.5887
margin_bottom = 11.1278
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "500"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin4" type="Sprite" parent="UpgradeCosts"]
position = Vector2( 68.9695, 50.8799 )
texture = ExtResource( 15 )

[node name="Label4" type="Label" parent="UpgradeCosts/Coin4"]
margin_left = 4.40131
margin_top = -2.123
margin_right = 28.4013
margin_bottom = 11.877
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "800"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coin5" type="Sprite" parent="UpgradeCosts"]
position = Vector2( 109.027, 50.4942 )
texture = ExtResource( 15 )

[node name="Label5" type="Label" parent="UpgradeCosts/Coin5"]
margin_left = 5.349
margin_top = -2.32141
margin_right = 36.349
margin_bottom = 11.6786
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "1200"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Quest Button" to="." method="_on_Quest_Button_pressed"]
[connection signal="pressed" from="Sell Button" to="." method="_on_Sell_Button_pressed"]
[connection signal="pressed" from="Upgrade Panel/Homing Souls" to="." method="_on_Homing_Souls_pressed"]
[connection signal="pressed" from="Upgrade Panel/Grave Button" to="." method="_on_Grave_Button_pressed"]
[connection signal="pressed" from="Upgrade Panel/DmgButton" to="." method="_on_DmgButton_pressed"]
[connection signal="pressed" from="Upgrade Panel/Coffin Button" to="." method="_on_Coffin_Button_pressed"]
[connection signal="pressed" from="Upgrade Panel/Void Button" to="." method="_on_Void_Button_pressed"]
